test/kobra-code/syntax-errors/missing-semicolon-in-for.ks
for ($ i = 0; i < 10, i++): // comma instead of semicolon
    say i
end